markdown añadido test

--- a/automatizacion.ipynb
+++ b/automatizacion.ipynb
@@ -1009,6 +1009,14 @@
    "source": [
     "des=pd.read_sql('SELECT `Region of Incident`,SUM(`Total Number of Dead and Missing`) as total,`Incident year`,`Region of Origin` FROM des GROUP BY `Incident year`, `Region of Incident`',conn)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test git commit\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
