--- a/automatizacion.ipynb
+++ b/automatizacion.ipynb
@@ -1015,8 +1015,15 @@
    "metadata": {},
    "source": [
     "test git commit\n",
+    "\n",
+    "2 mod para git \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
