--- a/automatizacion.ipynb
+++ b/automatizacion.ipynb
@@ -1054,6 +1054,25 @@
    "source": [
     "testfuncion((1,2,3,4,5),1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('precios en japon')\n",
+    "print(190000*.12)\n",
+    "print(159000*.12)\n",
+    "print('precios en mexico',\n",
+    "29000,24000)\n",
+    "max_pro_mx=29000\n",
+    "max_pro_jp=22800\n",
+    "print('dif precio max pro japon - mexico',' ','$',max_pro_mx-max_pro_jp)\n",
+    "pro_mx=24000\n",
+    "pro_jp=22800\n",
+    "print('dif precio pro japon - mexico',' ','$',pro_mx-pro_jp)\n"
+   ]
   }
  ],
  "metadata": {
